<resources>
    <string name="app_name">E-Care</string>
    <string name="dashboard_placeholder">Dashboard</string>
    <string name="patients_placeholder">Patients</string>
    <string name="apropos_placeholder">A Propos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="identifiez_vous">Identifiez-vous</string>
    <string name="name">Name</string>
    <string name="applogo">appLogo</string>
    <string name="title_activity_patient_details">PatientDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test_flex_app_bar">TestFlexAppBar</string>
    <string name="strange">Doctor Strange was an egotistical but very brilliant surgeon.
        After a car accident destroys his hands and hinders his ability to perform surgery,
        he searches the globe for a way to repair them and encounters the Ancient One. After
        becoming one of the old Sorcerer Supreme\'s students, he becomes a practitioner of both
        the mystical arts as well as martial arts. Along with knowing many powerful spells, he
        has a costume with two mystical objects - the Cloak of Levitation and Eye of Agamotto
        that gives him added powers. Strange is aided along the way by
        his friend and servant to the Sorcerer Supreme, Wong, and a large assortment of mystical o
        bjects. He takes up residence in a mansion called the Sanctum Sanctorum, located in
        New York City. Later, Strange takes the title of Sorcerer Supreme.
    Doctor Strange was an egotistical but very brilliant surgeon.
        After a car accident destroys his hands and hinders his ability to perform surgery,
        he searches the globe for a way to repair them and encounters the Ancient One. After
        becoming one of the old Sorcerer Supreme\'s students, he becomes a practitioner of both
        the mystical arts as well as martial arts. Along with knowing many powerful spells, he
        has a costume with two mystical objects - the Cloak of Levitation and Eye of Agamotto
        that gives him added powers. Strange is aided along the way by
        his friend and servant to the Sorcerer Supreme, Wong, and a large assortment of mystical o
        bjects. He takes up residence in a mansion called the Sanctum Sanctorum, located in
        New York City. Later, Strange takes the title of Sorcerer Supreme.
    Doctor Strange was an egotistical but very brilliant surgeon.
        After a car accident destroys his hands and hinders his ability to perform surgery,
        he searches the globe for a way to repair them and encounters the Ancient One. After
        becoming one of the old Sorcerer Supreme\'s students, he becomes a practitioner of both
        the mystical arts as well as martial arts. Along with knowing many powerful spells, he
        has a costume with two mystical objects - the Cloak of Levitation and Eye of Agamotto
        that gives him added powers. Strange is aided along the way by
        his friend and servant to the Sorcerer Supreme, Wong, and a large assortment of mystical o
        bjects. He takes up residence in a mansion called the Sanctum Sanctorum, located in
        New York City. Later, Strange takes the title of Sorcerer Supreme.
    Doctor Strange was an egotistical but very brilliant surgeon.
        After a car accident destroys his hands and hinders his ability to perform surgery,
        he searches the globe for a way to repair them and encounters the Ancient One. After
        becoming one of the old Sorcerer Supreme\'s students, he becomes a practitioner of both
        the mystical arts as well as martial arts. Along with knowing many powerful spells, he
        has a costume with two mystical objects - the Cloak of Levitation and Eye of Agamotto
        that gives him added powers. Strange is aided along the way by
        his friend and servant to the Sorcerer Supreme, Wong, and a large assortment of mystical o
        bjects. He takes up residence in a mansion called the Sanctum Sanctorum, located in
        New York City. Later, Strange takes the title of Sorcerer Supreme.</string>
    <string name="title_activity_tool_bar">ToolBar</string>
</resources>
