<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utbm.tx.e_care.LoginActivity"
    android:background="@mipmap/splash_art">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="82dp"
        android:layout_height="88dp"
        app:srcCompat="@mipmap/ic_idea"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/applogo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identifiez_vous"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp"
        android:id="@+id/textView3" />



    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:background="@drawable/login_field_background1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="256dp"
        android:id="@+id/linearLayout">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name" />
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:background="#E3E9EC"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:background="@drawable/login_field_background2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/view">
        <EditText
            android:id="@+id/pwd_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />
    </LinearLayout>
    
    <Button
        android:id="@+id/signin_btn"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:background="@drawable/login_field_background3"
        android:text="@string/sign_in"
        android:textColor="@color/orange"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="448dp" />



</android.support.constraint.ConstraintLayout>
